tests/errors/literals/literal-bool-param.fn
---
Description: Literal declared with a bool parameter
Expected: FN3107
---

type BadLiteral
{
    init{}

    literal nope(value: bool)
    {
        return BadLiteral{}
    }
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
